leilao-backend/logs/diagnostico_leiloeiros_20260109_215824.txt
  File "C:\LeiloHub\leilao-aggregator-git\leilao-backend\scripts\diagnosticar_leiloeiro.py", line 93
    except Exception as e:
    ^^^^^^
SyntaxError: invalid syntax
